Fix drag menu spacing

--- a/src/app/components/DragMenu/styles.css
+++ b/src/app/components/DragMenu/styles.css
@@ -1,4 +1,4 @@
 .NLT__drag-menu {
-	width: 180px;
 	font-size: 0.9rem;
+	padding: 4px 10px;
 }
