--- a/src/app/components/IconText/styles.css
+++ b/src/app/components/IconText/styles.css
@@ -4,5 +4,6 @@
 }
 
 .NLT__icon-text > p {
+	white-space: nowrap;
 	margin: 0;
 }
